--- a/src/hey_orac/web/static/css/style.css
+++ b/src/hey_orac/web/static/css/style.css
@@ -41,14 +41,14 @@ body::before {
 
 .header {
     text-align: center;
-    margin-bottom: 5px;
-    padding-bottom: 5px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
 }
 
         .banner {
             max-width: 50%;
             height: auto;
-            margin-bottom: 5px;
+            margin-bottom: 0px;
         }
 
         .title {
@@ -66,7 +66,7 @@ body::before {
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 0px;
 }
 
 .sliders-container {
@@ -131,6 +131,7 @@ body::before {
     flex-direction: column;
     align-items: center;
     margin-bottom: 15px;
+    margin-top: 0px;
     width: 100%;
 }
 
